// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`download-bandcamp-description Album page A (with Track info) execute script generated album info text 1`] = `
"Martin Carr
Crazy Faces (Songs For Snod (2012-2019))
https://martincarr.bandcamp.com/album/crazy-faces-songs-for-snod-2012-2019

<Track list>
1. One Fine Day
2. Crazy Faces
3. I'm Alright
4. Cal
5. Easy Come, Easy Go
6. World In Action
7. The Years Roll Down My Face
8. Jack Jones
9. Only You Can See Me
10. Land of the Living
11. Snodgrass
12. The Years Roll Down My Face (Easy Come, Easy Go) Reprise
13. Your Body

<Description>
Sometime ago, my friend David Quantick sent me a book of short stories, urging me to read the one called Snodgrass by Ian R Mcleod. Alternative histories don't tend to interest me too much but Snodgrass made me laugh out loud. I filed it alongside National Lampoon's 'Tragical Misery Tour' in my internal Non-Beatle Beatle things that are very funny folder. 

Fast forward to 2012 and I'm ten years adrift, earning no money and unable to finish anything. I've cut myself off from social media and, with two very young children, sleeping even less than usual. DQ sends me an email asking me to write the music for a tv adaptation of Snodgrass. Yeah! I say. Yeah! Yeah! Yeah!

I meet the producer, Mike, and the three of us have long and boozy conversations about script and music and The Beatles. I set up a slapback delay and every morning I go into the studio and pretend I'm a middle-aged man who threw it all away. Turns out there was no pretense necessary. 

Later, I catch the red-eye up to Manchester to meet up with the director David Blair, the director, Ian R McLeod, Mike and DQ, and Ian Hart, who is playing Lennon for the third time. There follows a lot of drinking and laughing. 

The film is shown on Sky Arts and that is that.

Since then there has been talk of a feature film. Songs and scripts have been written, actors auditioned, and money chased but it looks like it's not going to happen. 

These are not the versions used in the film, I don't think I own those. These are the demos, they crackle and pop but I think they sound pretty good. 

I hope you enjoy this album x

<Credits>
All songs by Martin Carr
The cover is a photograph I took during the filming, somewhere in Manchester, 2012.

<Published>
2022-03-05

<Lisence>
All Rights Reserved

<Tags>
Pop, Cardiff

<Publisher>
[name]
Martin Carr

[location]
Cardiff, UK

[description]
Martin Carr.
The Black Serpent Choir.
bravecaptain
What Future

[website]
* Twitter (https://twitter.com/#!/Martin_Carr)

<Lyrics (In-page)>
1. One Fine Day
The first thing given to me was a lucky face
I could charm the birds out of the trees before I could tie my lace
I was a backstreet Pharoah, nobody could take my place

I thought that I could give everybody a dream
And change the whole bloody world with a song and scream
But i didn't want to be your Jesus, that's not my scene

But one fine day, I through it all away
I turned on a Cuban heel and walked out of there
One fine day, I threw it all away
Now there's no money in my pocket and my cupboard is always bare

Winston O'Boogie!

2. Crazy Faces
Julia and Fred
Breaking the bed
Fucking with my head

I hope you're ready for my reputation 
and my
Crazy faces and my flames

Julia and Fred
I'm sick in the head
Wish that I was dead

I hope you're ready for my discrimination
and my
Crazy faces and my flames

They fucked me up, my mum and dad.

3. I'm Alright
Move on world
I got nothing
You see I threw it all away
Now there's no money for the bus home

Oh, I know that I have wasted many hours
Still the mountain top is out of reach

But I'm alright, I'm still free
I'm alright I'm still me
I'm alright

4. Cal
Cal
Am I dreaming?
I don't remember who I'm supposed to be
Cal
Do you know how I feel about you?

Cal
Why can't I be happy?
Even the simple things are hard to do
Cal
There's a place in this world for you
And me

And though the years run away from me
The days suck the life out of my bones
But the way you look at me
It knocks me right over

5. Easy Come, Easy Go
I dreamed a dream
My dreams came true
When I awoke my dreams were through
Easy come, easy go

I had a girl
We had a son
I ran as fast as I could run
Easy come, easy go

Hail! Hail! Rock 'n' Roll
I took my ball and I went home
Easy come, easy go

My mother got hit 
By a copper's car
Died on the street
On her own, in the dark 
Easy come
Easy go

8. Jack Jones
Jack Jones
How did I sink so low?
All on my Jack Jones
Where did everybody go?
I used to believe
But I was deceived
Now it's just me and the stranger in the mirror
If you want to know why
I hardly smile
Well I'm a glass is always half smashed kind of guy
You can carve that on my headstone

I 
No matter how hard I try
To fit with the world outsiude
I always end up
Back in my room on my
Jack Jones

I'm on my Jack Jones
high up in my favourite tree
All on my Jack Jones
Where can everybody be?
The people below
Look at them go
Always fighting over one thing or another
Lost in the fog
Gone to the dogs
This country's so far right
I fall out of bed at n ight

I 
No matter how hard I try
To fit with the world outsiude
I always end up
Back in my room on my
Jack Jones

9. Only You Can See Me
If you believe in nothing
Then you'll believe in anything
I believe in a supreme being
I believe it's you

The sun cannot find me
On the brightest of days
No shadow
No footprints
No reflection I make

Only you can see me

Look at me
I'm a fog to my family
I'm a ghost to my friends
I'm like a blur to myself

The sun cannot find me
On the brightest of days
No shadow
No footprints
No reflection I make

Only you can see me

10. Land of the Living
Now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not kneel

Your number one
prodigal son 
is here
And I'll take you all 
from the wigwam
down to the pier

'Cos now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not yield

The rain anoints
The sun appoints
My crown
The bells ring
Your returning king's
Yome town

Now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not kneel

11. Snodgrass
Hey, man
You look a lot like Snodgrass
Don't even try to understand
Hey, man
You talk a lot like Snodgrass
Don't even try to understand

Nine to five
the long slow turn of the knife
Boring people with their boring lives
kettle on
The office clock sits on its hands
What are you looking at?
What do you want from me, Snodgrass?

You look a lot like Snodgrass

12. The Years Roll Down My Face (Easy Come, Easy Go) Reprise
The years roll down my face
I can't even try to trace them
The years roll down my face
Oh, I know how I have wasted them

Easy come, easy go

13. Your Body
Your body trembles 
Beneath your dress
The cold wind blows up from the Mersey
Your life's arranged
Mine's a mess
We fumble blindly 
In an alley

Where can we go?
Where can we go?
Where others can't find
Where can we go?
Where can we go?
Where others can't find us

Your mother cries
And paints her nails
Your father hides 
Within his shadows
Your brother runs
Without a word
And leaves you
drowning in the suburbs

Where can we go?
Where can we go?
Where others can't find
Where can we go?
Where can we go?
Where others can't find us"
`;

exports[`download-bandcamp-description Album page A (with Track info) execute script generated track info text 1`] = `
"Martin Carr - Crazy Faces (Songs For Snod (2012-2019))

1. One Fine Day
<Lyrics>
The first thing given to me was a lucky face
I could charm the birds out of the trees before I could tie my lace
I was a backstreet Pharoah, nobody could take my place

I thought that I could give everybody a dream
And change the whole bloody world with a song and scream
But i didn't want to be your Jesus, that's not my scene

But one fine day, I through it all away
I turned on a Cuban heel and walked out of there
One fine day, I threw it all away
Now there's no money in my pocket and my cupboard is always bare

Winston O'Boogie!

2. Crazy Faces
<Lyrics>
Julia and Fred
Breaking the bed
Fucking with my head

I hope you're ready for my reputation 
and my
Crazy faces and my flames

Julia and Fred
I'm sick in the head
Wish that I was dead

I hope you're ready for my discrimination
and my
Crazy faces and my flames

They fucked me up, my mum and dad.

3. I'm Alright
<Lyrics>
Move on world
I got nothing
You see I threw it all away
Now there's no money for the bus home

Oh, I know that I have wasted many hours
Still the mountain top is out of reach

But I'm alright, I'm still free
I'm alright I'm still me
I'm alright

4. Cal
<Lyrics>
Cal
Am I dreaming?
I don't remember who I'm supposed to be
Cal
Do you know how I feel about you?

Cal
Why can't I be happy?
Even the simple things are hard to do
Cal
There's a place in this world for you
And me

And though the years run away from me
The days suck the life out of my bones
But the way you look at me
It knocks me right over

5. Easy Come, Easy Go
<Lyrics>
I dreamed a dream
My dreams came true
When I awoke my dreams were through
Easy come, easy go

I had a girl
We had a son
I ran as fast as I could run
Easy come, easy go

Hail! Hail! Rock 'n' Roll
I took my ball and I went home
Easy come, easy go

My mother got hit 
By a copper's car
Died on the street
On her own, in the dark 
Easy come
Easy go

6. World In Action


7. The Years Roll Down My Face


8. Jack Jones
<Lyrics>
Jack Jones
How did I sink so low?
All on my Jack Jones
Where did everybody go?
I used to believe
But I was deceived
Now it's just me and the stranger in the mirror
If you want to know why
I hardly smile
Well I'm a glass is always half smashed kind of guy
You can carve that on my headstone

I 
No matter how hard I try
To fit with the world outsiude
I always end up
Back in my room on my
Jack Jones

I'm on my Jack Jones
high up in my favourite tree
All on my Jack Jones
Where can everybody be?
The people below
Look at them go
Always fighting over one thing or another
Lost in the fog
Gone to the dogs
This country's so far right
I fall out of bed at n ight

I 
No matter how hard I try
To fit with the world outsiude
I always end up
Back in my room on my
Jack Jones

9. Only You Can See Me
<Lyrics>
If you believe in nothing
Then you'll believe in anything
I believe in a supreme being
I believe it's you

The sun cannot find me
On the brightest of days
No shadow
No footprints
No reflection I make

Only you can see me

Look at me
I'm a fog to my family
I'm a ghost to my friends
I'm like a blur to myself

The sun cannot find me
On the brightest of days
No shadow
No footprints
No reflection I make

Only you can see me

10. Land of the Living
<Lyrics>
Now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not kneel

Your number one
prodigal son 
is here
And I'll take you all 
from the wigwam
down to the pier

'Cos now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not yield

The rain anoints
The sun appoints
My crown
The bells ring
Your returning king's
Yome town

Now I'm back 
In the land of the living
I will not stumble
I will not fall
Now I'm back
In the land of the living
I shall not be humble
I shall not kneel

11. Snodgrass
<Lyrics>
Hey, man
You look a lot like Snodgrass
Don't even try to understand
Hey, man
You talk a lot like Snodgrass
Don't even try to understand

Nine to five
the long slow turn of the knife
Boring people with their boring lives
kettle on
The office clock sits on its hands
What are you looking at?
What do you want from me, Snodgrass?

You look a lot like Snodgrass

12. The Years Roll Down My Face (Easy Come, Easy Go) Reprise
<Lyrics>
The years roll down my face
I can't even try to trace them
The years roll down my face
Oh, I know how I have wasted them

Easy come, easy go

13. Your Body
<Lyrics>
Your body trembles 
Beneath your dress
The cold wind blows up from the Mersey
Your life's arranged
Mine's a mess
We fumble blindly 
In an alley

Where can we go?
Where can we go?
Where others can't find
Where can we go?
Where can we go?
Where others can't find us

Your mother cries
And paints her nails
Your father hides 
Within his shadows
Your brother runs
Without a word
And leaves you
drowning in the suburbs

Where can we go?
Where can we go?
Where others can't find
Where can we go?
Where can we go?
Where others can't find us"
`;
